# libschwa

./: .gitignore  CHANGELOG  LICENCE  Makefile  Makefile.am  Makefile.darwin  Makefile.linux  Makefile.macos  Makefile.release  Makefile.targets  README  README.txt  TODO.txt  actions.rl  autoreconf.sh  configure.ac  experiment.cc  experiment.rl  grepsource  grepsource.sh  pom.xml  state.h  stream.h  test_tokenizer.cc  token.h  tokenizer.cc  tokenizer.h  tokenizer.rl  tokens.h
api/python/: conll2docrep.py  example.py
doc/: .gitignore  Doxyfile
docrep/: .vimrc  Makefile.linux  Makefile.targets  setup.py
docrep/lib/: .gitignore
docrep/main/: test.cc
docs/: Doxyfile
include/schwa/: base.h  docrep.hpp  exception.h  hash.hpp  hashtable.hpp  pool.h  pool.hpp  std.h  std.hpp
m4/: ax_cxx_compile_stdcxx_11.m4  ax_ext.m4  options.m4  version-set.m4  version.m4
main/: test.cc
python/: pystream.h  pytoken.cc  setup.py  test.py
python/pystreams/: callback.h  seq.h  text.h
rules/: contractions.rl  emoticons.rl  html.rl  main.rl  numbers.rl  punctuation.rl  quotes.rl  units.rl  web.rl
scripts/: depends
src/apps/: Makefile.am
src/apps/dr-grep/: .gitignore  Makefile.am  language.cc  language.h  language_gen.cc  main.cc  main.h
src/lib/: .gitignore  Makefile.am
src/lib/schwa/: _base.h  _base.h.in  canonical-schema.cc  canonical-schema.h  config.h  containers.h  dr.h  drdist.cc  encoding.cc  encoding.h  encoding_gen.h  encoding_impl.h  enums.h  exception.cc  exception.h  hash.h  hash_impl.h  hash_test.cc  hashtable.h  hashtable_test.cc  learn.h  licence.cc  macros.h  macros.h.in  memory.h  pool.h  pool_test.cc  port.cc  port.h  port.h.in  port_test.cc  unicode.cc  unicode.h  unicode_gen.cc  unicode_gen.h  unicode_test.cc  unittest.cc  unittest.h  unittest_main.cc  version.cc  (+1 more)
src/lib/schwa/cluster/: no_mpi.cc
src/lib/schwa/config/: base.cc  base.h  config.cc  exception.cc  exception.h  group.cc  group.h  main.cc  main.h  main_impl.h  node.cc  op.cc  op.h  op_impl.h  option.cc  serialisation.cc  serialisation.h  serialisation_impl.h
src/lib/schwa/containers/: block_vector.h  block_vector_test.cc
src/lib/schwa/corpora/: clueweb.cc  clueweb.h  importer.cc  importer.h  nanc.cc  nanc.h  tipster.cc  tipster.h  tipster_gen.cc
src/lib/schwa/docrep/: document.cc
src/lib/schwa/dr/: config.cc  config.h  field_defs.cc  field_defs.h  field_defs_impl.h  fields.h  fields_test.cc  helpers.h  helpers_test.cc  istore.h  lazy_test.cc  pointers_test.cc  query.cc  query.h  query_gen.cc  reader.cc  reader.h  reader_test.cc  runtime.cc  runtime.h  schema.cc  schema.h  self_pointer_test.cc  slices_test.cc  type_info.cc  type_info.h  wire.h  writer.cc  writer.h  writer_test.cc
src/lib/schwa/dr-dist/: helpers.cc  helpers.h  server.cc  server.h  worker_main.h
src/lib/schwa/formats/: exception.cc  exception.h  html.cc  html.h  html_charset_sniff_content_type_gen.cc  html_charset_sniff_gen.cc  html_gen.cc  html_named_character_references_gen.cc  http.cc  http.h  http_gen.cc  plain-text.cc  plain-text.h  plain-text_gen.cc  sgml.cc  sgml.h  sgml_gen.cc  uri.cc  uri.h  uri_gen.cc  warc.cc  warc.h  warc_gen.cc
src/lib/schwa/io/: array_reader.cc  array_reader.h  buffer.cc  enums.cc  enums.h  file_source.cc  file_source.h  istream_source.cc  istream_source.h  logging.cc  logging.h  logging_enums.h  mmapped_source.cc  mmapped_source.h  mmapped_source_test.cc  paths.cc  paths.h  paths_test.cc  source.h  streams.cc  streams.h  traits.h  unsafe_array_writer.h  utils.cc  utils.h  write_buffer.cc  write_buffer.h  write_buffer_test.cc
src/lib/schwa/learn/: crfsuite.cc  crfsuite.h  crfsuite_impl.h  enums.h  extract.cc  extract.h  extract_impl.h  extract_test.cc  feature-transformers.h  feature_transformers_test.cc  features.cc  features.h  features_impl.h  features_test.cc  io.h  io_impl.h  lexicon.cc  lexicon.h  model.cc  model.h  phases.h  phases_impl.h
src/lib/schwa/lex/: brown-clusters.cc  brown-clusters.h  brown-clusters_impl.h  brown-clusters_test.cc  clark-clusters.cc  clark-clusters.h  gazetteer.cc  gazetteer.h  word-embeddings.cc  word-embeddings.h  word-embeddings_test.cc  word-form.cc  word-form.h  word-form_test.cc
src/lib/schwa/mpl/: if.h  if_test.cc
src/lib/schwa/msgpack/: dynamic.cc  dynamic.h  dynamic_impl.h  enums.cc  enums.h  exception.cc  exception.h  wire.cc  wire.h  wire_impl.h  wire_test.cc
src/lib/schwa/new-tokenizer/: tokenizer.cc  tokenizer.h  tokenizer_impl.h
src/lib/schwa/port/: bsd.cc  colour.cc  unix.cc  unix_common.cc
src/lib/schwa/tagger/: ner.cc  ner.h  ner_impl.h  pos.cc  pos.h  pos_impl.h
src/lib/schwa/tokenizer/: common.h  debug_text_stream.cc  debug_text_stream.h  docrep_stream.cc  docrep_stream.h  exception.h  stream.h  text_stream.cc  text_stream.h  tokenizer.cc  tokenizer.h  tokenizer_gen.cc  tokenizer_impl.h  tokenizer_state.h
src/lib/schwa/tokenizer/streams/: debug_text.cc  docrep.cc  text.cc
src/lib/schwa/unsupervised/: brown_clusters.cc  brown_clusters.h
src/lib/schwa/utils/: buffer.cc  buffer.h  buffer_impl.h  counter.h  enums.h  escape.cc  hash.h  ragel.h  shlex.cc  shlex.h  shlex_test.cc  string-pool.cc  string-pool.h  string-pool_test.cc  string.h  string_test.cc
src/main/: drdist.cc  drsink.cc  drsource.cc  drui.cc  drworker.cc  test.cc  tokenizer.cc
src/ragel/: tokenizer.rl
src/schwa/: licence.cc  version.cc
streams/: debug_text.h  text.h
test/: App.java  Doc.java  Token.java
tests/: dates000.tok  fairfax2466001.tok  fairfax2552276.tok  fairfax2552283.html  smh000.html  smh001.txt  smh002.txt  smh003.txt  smh004.tok  smh006.txt  smh007.html  smh007.txt  smh008.html  smh008.tok  smh010.tok  smh011.tok  smh012.tok  smh012.txt  smh013.tok  smh014.html  smh014.tok  smh015.tok  smh016.tok  smh017.html  smh017.tok  smh018.tok  smh019.html  smh019.tok  smh020.txt  smh021.html  smh023.tok  smh023.txt  smh024.tok  smh025.tok  smh025.txt  smh026.txt  smh028.tok  smh029.tok  smh030.tok  smh030.txt  (+40 more)
tokenizer/: .gitignore  Makefile  TODO.txt  compare.sh  experiment.rl  graph2chr.py  source.h  state.h  stream.h
(+536 files in other folders)
